# tauri-plugin-keyring

./: Cargo.toml
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/src/: lib.rs
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: android.rs  commands.rs  lib.rs
