[package]
name = "tauri-plugin-keyring"
version = "0.0.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-keyring"

[dependencies]
tauri = { version = "2.0.0-beta.22" }
serde = "1.0"
thiserror = "1.0"
keyring = "2.3.3"

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.17", features = ["build"] }
